--- a/package.json
+++ b/package.json
@@ -1,47 +1,48 @@
 {
-  "name": "nextjs-recipes",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@auth/prisma-adapter": "^2.10.0",
-    "@heroui/form": "^2.1.24",
-    "@heroui/input": "^2.4.25",
-    "@heroui/modal": "^2.2.21",
-    "@heroui/navbar": "^2.2.22",
-    "@heroui/react": "^2.8.2",
-    "@heroui/system": "^2.4.20",
-    "@heroui/theme": "^2.4.20",
-    "@prisma/client": "^6.14.0",
-    "@prisma/extension-accelerate": "^2.0.2",
-    "@types/dompurify": "^3.0.5",
-    "bcryptjs": "^3.0.2",
-    "dompurify": "^3.2.6",
-    "framer-motion": "^12.23.12",
-    "html-react-parser": "^5.2.6",
-    "isomorphic-dompurify": "^2.26.0",
-    "next": "15.4.6",
-    "next-auth": "^5.0.0-beta.29",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "zod": "^4.0.17",
-    "zustand": "^5.0.7"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
-    "prisma": "^6.14.0",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+	"name": "nextjs-recipes",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"postinstall": "prisma generate"
+	},
+	"dependencies": {
+		"@auth/prisma-adapter": "^2.10.0",
+		"@heroui/form": "^2.1.24",
+		"@heroui/input": "^2.4.25",
+		"@heroui/modal": "^2.2.21",
+		"@heroui/navbar": "^2.2.22",
+		"@heroui/react": "^2.8.2",
+		"@heroui/system": "^2.4.20",
+		"@heroui/theme": "^2.4.20",
+		"@prisma/client": "^6.14.0",
+		"@prisma/extension-accelerate": "^2.0.2",
+		"@types/dompurify": "^3.0.5",
+		"bcryptjs": "^3.0.2",
+		"dompurify": "^3.2.6",
+		"framer-motion": "^12.23.12",
+		"html-react-parser": "^5.2.6",
+		"isomorphic-dompurify": "^2.26.0",
+		"next": "15.4.6",
+		"next-auth": "^5.0.0-beta.29",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"zod": "^4.0.17",
+		"zustand": "^5.0.7"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3",
+		"@tailwindcss/postcss": "^4",
+		"@types/node": "^20",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"eslint": "^9",
+		"eslint-config-next": "15.4.6",
+		"prisma": "^6.14.0",
+		"tailwindcss": "^4",
+		"typescript": "^5"
+	}
 }
